force-app/main/default/objects/Date_Stamp_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Date_Field_API_Name__c</fullName>
        <label>Date Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entered</fullName>
                    <default>true</default>
                    <label>Entered</label>
                </value>
                <value>
                    <fullName>Exited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_API_Name__c</fullName>
        <label>Picklist API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Date Stamp Mapping</label>
    <listViews>
        <fullName>All_Contact</fullName>
        <columns>MasterLabel</columns>
        <columns>Date_Field_API_Name__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Direction__c</columns>
        <columns>Picklist_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>All Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Opportunity</fullName>
        <columns>MasterLabel</columns>
        <columns>Date_Field_API_Name__c</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Direction__c</columns>
        <columns>Picklist_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_API_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>All Opportunity</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Date Stamp Mappings</pluralLabel>
</CustomObject>