force-app/main/default/objects/Date_Stamp_Mapping__mdt/fields/Entry_Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_Field_API_Name__c</fullName>
    <label>Entry Date Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>