force-app/main/default/objects/Date_Stamp_Mapping__mdt/fields/Exit_Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date_Field_API_Name__c</fullName>
    <label>Exit Date Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>